# autobahn-api

./: .gitignore  .spectral.yaml  CNAME  README.md  __init__.py.template  create_doc.py  generator_config.yaml  index.html  openapi.yaml  rename_generated_code.py
python-client/: .gitlab-ci.yml  .travis.yml  README.md  create_doc.py  pyproject.toml  pyproject.toml.old  rename_generated_code.py  setup.py  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/: __init__.py
python-client/deutschland/autobahn/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/docs/: Closure.md  Coordinate.md  DefaultApi.md  DisplayType.md  ElectricChargingStation.md  Extent.md  LatLongValue.md  MultilineText.md  ParkingLorry.md  Point.md  RoadEvent.md  RoadId.md  RoadItem.md  Roadwork.md  Warning.md  Webcam.md  index.rst
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: autobahn.api.rst  autobahn.apis.rst  (+10 more)
python-client/test/: test_closure.py  test_closures.py  test_coordinate.py  test_default_api.py  test_display_type.py  test_electric_charging_station.py  test_electric_charging_stations.py  test_extent.py  test_lat_long_value.py  test_lorry_parking_feature_icon.py  test_multiline_text.py  test_parking_lorries.py  test_parking_lorry.py  test_point.py  test_road_event.py  test_road_event_all_of.py  test_road_id.py  test_road_item.py  test_roads.py  test_roadwork.py  test_roadworks.py  test_warning.py  test_warnings.py  test_webcam.py  test_webcam_all_of.py  test_webcams.py
(+90 files in other folders)
